--- a/TED/ipod_magic/1/script_ipod_magic_01.html
+++ b/TED/ipod_magic/1/script_ipod_magic_01.html
@@ -1,46 +1,38 @@
 <html>
 <head><title>TED - iPod Magic 1</title>
-<style type="text/css">
-div {
-    padding: 3px;
-    margin: 3px;
-}
-.title {
-    border: 3px solid magenta;
-}
-.sentence {
-    border: 1px solid blue;
-}
-.ref {
-    font-size: smaller;
-}
-</style>
+<link type="text/css" href="../../css/ted.css" rel="stylesheet"></link>
 </head>
 <body>
 <div class="title">
     <h1>TED - iPod Magic 1</h1>
 </div>
 <div class="sentence">
+    <audio src="1013_1704_ipod_magic_01_01.mp3" controls="controls" loop="true"></audio>
     <p class="english">So the type of magic I like, and I'm a magician, is a magic that uses technology to create illusions.</p>
     <p class="korean">제가 좋아하는 마법은 과학 기술을 이용해서 환상을 만드는 마법이에요. 참고로 저는 마법사이고요.</p>
 </div>
 <div class="sentence">
+    <audio src="1013_1704_ipod_magic_01_02.mp3" controls="controls" loop="true"></audio>
     <p class="english">So I would like to show you something I've been working on.</p>
     <p class="korean">제가 최근에 작업한 것을 보여드리지요.</p>
 </div>
 <div class="sentence">
+    <audio src="1013_1704_ipod_magic_01_03.mp3" controls="controls" loop="true"></audio>
     <p class="english">It's an application that I think will be useful for artists -- multimedia artists in particular.</p>
     <p class="korean">이것은 아마 예술가들, 특히 멀티미디어 예술가들에게 유용한 프로그램이에요.</p>
 </div>
 <div class="sentence">
+    <audio src="1013_1704_ipod_magic_01_04.mp3" controls="controls" loop="true"></audio>
     <p class="english">It synchronizes videos across multiple screens of mobile devices.</p>
     <p class="korean">이 프로그램은 이 모바일 기기들의 다양한 화면들에 비디오가 동시에 나오게 해주지요.</p>
 </div>
 <div class="sentence">
+    <audio src="1013_1704_ipod_magic_01_05.mp3" controls="controls" loop="true"></audio>
     <p class="english">And I borrowed these three iPods from people here in the audience to show you what I mean.</p>
     <p class="korean">제 말씀이 무슨 의미인지 보여드리기 위해 iPod 3개를 관중석에 계신 분들로 부터 제가 잠시 빌렸습니다.</p>
 </div>
 <div class="sentence">
+    <audio src="1013_1704_ipod_magic_01_06.mp3" controls="controls" loop="true"></audio>
     <p class="english">And I'm going to use them to tell you a little bit about my favorite subject: deception.</p>
     <p class="korean">자, 그럼 이걸 사용해서 제가 제일 좋아하느 주제인 속임수에 대해 말씀드리지요.</p>
 </div>
