* add new TED sound files - visualization

--- a/TED/ipod_magic/1/script_ipod_magic_01.html
+++ b/TED/ipod_magic/1/script_ipod_magic_01.html
@@ -37,7 +37,7 @@
     <p class="korean">자, 그럼 이걸 사용해서 제가 제일 좋아하느 주제인 속임수에 대해 말씀드리지요.</p>
 </div>
 <div class="ref">
-<p><a href="http://www.screenr.com/J20s" target="_new">여기</a>에서 내용을 보면서 들을 수 있습니다.</p>
+<p><a href="http://opentutorials.org/course/75/578" target="_new">여기</a>에서 내용을 보면서 들을 수 있습니다.</p>
 </div>
 </body>
 </html>
