--- a/TED/ipod_magic/2/script_ipod_magic_02.html
+++ b/TED/ipod_magic/2/script_ipod_magic_02.html
@@ -33,7 +33,7 @@
     <p class="korean">마코 템페스트: 누가 속임수에 대해 물었을 때, 그는 이렇게 대답했지요.</p>
 </div>
 <div class="ref">
-<p><a href="http://www.screenr.com/TU0s" target="_new">여기</a>에서 내용을 보면서 들을 수 있습니다.</p>
+<p><a href="http://opentutorials.org/course/75/576" target="_new">여기</a>에서 내용을 보면서 들을 수 있습니다.</p>
 </div>
 </body>
 </html>
